Refactor routes into separate modules, add validation middleware, error handling, and test suite
- Split api.js into budget, envelopes, and spendings route files
- Add requireBody, validateBudget, validateEnvlope, validateSpending, and findEnvelope middleware
- Standardize API responses to { success, message/data } format
- Add budget update constraint (cannot lower below total envelope allocations)
- Add global error handler in api.js
- Add getTotalEnvelopesBudget helper in utiles.js
- Update seed.js to match new response structure
- Add 117 tests (utiles, middleware, API integration) using Node built-in test runner
- Add README with API documentation

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Rodarly Perilus",
   "main": "app.js",
   "scripts": {
-    "test": "node test.js",
+    "test": "node --test test/*.js",
     "start": "node app.js",
     "dev": "nodemon app.js",
     "seed": "node routes/seed.js"
